--- a/proyecto.ipynb
+++ b/proyecto.ipynb
@@ -221,6 +221,142 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 301 entries, 0 to 300\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column                Non-Null Count  Dtype  \n",
+      "---  ------                --------------  -----  \n",
+      " 0   S.NO                  301 non-null    int64  \n",
+      " 1   Name                  301 non-null    object \n",
+      " 2   Nationality           301 non-null    object \n",
+      " 3   Current Rank          301 non-null    int64  \n",
+      " 4   Previous Year Rank    277 non-null    object \n",
+      " 5   Sport                 301 non-null    object \n",
+      " 6   Year                  301 non-null    int64  \n",
+      " 7   earnings ($ million)  301 non-null    float64\n",
+      "dtypes: float64(1), int64(3), object(4)\n",
+      "memory usage: 18.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "deportistas_df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Deportistas cuyo ranking ha subido al menos dos lugares entre 2010 y 2020."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Atleta con el menor número de apariciones y mayores ganancias."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Deporte y país con mayor número de atletas no rankeados que entraron en la lista de atletas mejor pagados."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### País con mayor número de deportes con atletas en el dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ¿Cuántos atletas por deporte tiene cada país?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ganancia mínima y máxima (dentro del dataset) por deporte y por país."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Atleta con mayores ganancias por deporte por década"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ganancia total por cada deporte por cada año."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
